# Proyecto-Final---IndiServ

./: Archivo.h.cpp  Autenticacion.cpp  Autenticacion.h  BuzonSugerencias.cpp  BuzonSugerencias.h  CMakeLists.txt  CloudServiceGateway.cpp  CloudServiceGateway.h  GestorDatos.cpp  GestorDatos.h  LectorEspecificaciones.cpp  LectorEspecificaciones.h  MotorDiagnostico.cpp  MotorDiagnostico.h  MotorDiagnostico_Ramas.cpp  README.md  main.cpp
